测试加载大量数据性能问题

--- a/MyECharts/ECharts/lib/index.html
+++ b/MyECharts/ECharts/lib/index.html
@@ -1,21 +1,59 @@
 <!DOCTYPE html>
-<html>
+<html style="height: 100%">
     <head>
         <meta charset="utf-8">
-            </head>
-    <body>
-        <div id="container" style="height:600px;width:600px;"></div>
+        <meta name="viewport" content="width=device-width,initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
+        <style>
+        </style>
+
+    </head>
+    <body style="height: 100%; margin: 0">
+        <div id="container" style="height:100%;width:100%"></div>
         <script type="text/javascript" src="./core/echarts.min.js"></script>
         <script type="text/javascript">
             var dom = document.getElementById("container");
             var myChart = echarts.init(dom);
             var app = {};
             option = null;
-            option = {
+            function getData(n) {
+                var arr = [],
+                i,
+                a,
+                b,
+                c,
+                spike;
+                for (i = 0; i < n; i = i + 1) {
+                    if (i % 100 === 0) {
+                        a = 2 * Math.random();
+                    }
+                    if (i % 1000 === 0) {
+                        b = 2 * Math.random();
+                    }
+                    if (i % 10000 === 0) {
+                        c = 2 * Math.random();
+                    }
+                    if (i % 50000 === 0) {
+                        spike = 10;
+                    } else {
+                        spike = 0;
+                    }
+                    arr.push([
+                              i,
+                              2 * Math.sin(i / 100) + a + b + c + spike + Math.random()
+                              ]);
+                }
+                return arr;
+            }
+        var n = 5000,
+        data = getData(n);
+        
+        option = {
                 title: {
-                    text: 'ECharts 入门示例'
+                    text: '测试'
                 },
-                tooltip: {},
+                tooltip: {
+                    trigger: 'axis'
+                },
                 legend: {
                     data:['销量']
                 },
@@ -25,8 +63,8 @@
                 yAxis: {},
                 series: [{
                          name: '销量',
-                         type: 'bar',
-                         data: [5, 20, 36, 10, 10, 20]
+                         type: 'line',
+                         data: data
                          }]
             };;
         if (option && typeof option === "object") {
@@ -35,8 +73,10 @@
         function resizeContainer(width,height) {
             alert(width);
             var container = document.getElementById("container")
-            container.style.height = height + "px";
-            container.style.width = width + "px";
+            container.style.height = width+ 'px';
+            container.style.width = height + 'px';
+            //根据宽高调整
+            myChart.resize();
         }
         function resize2(cssText) {
             var container = document.getElementById("container")
